--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@ title: "Home"
 {% else %}
   {% include archive.html title="Posts" %}
 {% endif %}
+
+<embed src="https://abirr18.github.io/Abir Rahaman Resume.pdf" width="100%" height="850px"/>, 
